# Context-aware-cashe

./: .gitignore  CONTRIBUTING.md  README.md  RELEASE_CHECKLIST.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/grafana/dashboards/: rag_cache_dashboard.json
config/grafana/provisioning/dashboards/: dashboards.yml
config/grafana/provisioning/datasources/: prometheus.yml
config/prometheus/: prometheus.yml
docs/: LOAD_TESTING.md  architecture.md  benchmarks.md  quickstart.md
examples/: basic_usage.py  benchmark.py  config_example.yaml  diagnose_latencies.py  quickstart.py  rag_pipeline_example.py  run_large_scale_benchmark.py  run_observability_demo.py  test_dataset.json  test_similarity.py  verify_tenant_isolation.py
rag_cache/: __init__.py
rag_cache/core/: cache.py  config.py  decision_engine.py  default_intent.py  facade.py  metrics.py  models.py  observability.py
rag_cache/integrations/embeddings/: mock.py  sentence_transformer.py
rag_cache/integrations/key_value_stores/: in_memory.py  redis.py
rag_cache/integrations/vector_stores/: faiss.py  in_memory.py
rag_cache/interfaces/: __init__.py  embedding.py  intent.py  key_value_store.py  vector_store.py
rag_cache/utils/: hashing.py
tests/: test_config.py  test_imports.py  test_stampede.py
tools/calibration/: benchmark_report.csv  benchmark_report.json  calibrate.py  calibration_report.csv  calibration_report.json  dataset.json
tools/load_testing/: benchmark_results.md  benchmark_workload.json  generate_workload.py  load_test.js  load_test_10.js  load_test_100.js  load_test_50.js  load_test_500.js  run_benchmarks.py  server.py
